appId: com.myapp # Defines the app ID for the application being tested.
---

- clearState # Clears the application state, which might include restarting the app or clearing session data.

- tapOn: # Taps on a specific point on the screen.
    point: "7%,6%" # Coordinates are 7% from the left and 6% from the top of the screen.

- tapOn: # Taps on an element with specific text.
    text: "Icons" # Text of the element to be tapped.
    index: 0 # If multiple elements have the same text, tap the first one.

- assertVisible: "Icons" # Verifies that the text "Icons" is visible on the screen.

# The following blocks repeat similar actions for different UI elements ("Size", "Color", "Styling").
- tapOn: 
    point: "7%,6%" # Again, tapping the menu icon at the top.
- tapOn:
    text: "Size"
    index: 0
- assertVisible: "Size"

- tapOn: 
    point: "7%,6%"
- tapOn:
    text: "Color"
    index: 0
- assertVisible: "Color"

- tapOn: 
    point: "7%,6%"
- tapOn:
    text: "Styling"
    index: 0
- assertVisible: "Styling"
