appId: com.myapp # Define the app ID for the application being tested.
---
- clearState # Clears the application state.

- tapOn: # Taps a specific point on the screen.
    point: "7%,6%" # Coordinates are 7% from the left and 6% from the top.

- scroll # Performs a scroll action.
- scroll # Performs another scroll action.

- tapOn: # Taps an element with the text "Height".
    text: "Height"
    index: 0 # If there are multiple elements with "Height", tap the first one.
- assertVisible: "Height" # Verifies that "Height" is visible on the screen.

- tapOn: # Taps the menu point again.
    point: "7%,6%"
- tapOn: # Taps an element with the text "Separators".
    text: "Separators"
    index: 0
- assertVisible: "Separators" # Verifies that "Separators" is visible.

- tapOn: # Again, tapping the menu point.
    point: "7%,6%"
- tapOn: # Taps the second instance of an element with the text "Icons".
    text: "Icons"
    index: 1
- assertVisible: "Icons" # Verifies that "Icons" is visible.

- tapOn: # Taps the menu point again.
    point: "7%,6%"
- tapOn: # Taps an element with the text "Custom Left/Right Components".
    text: "Custom Left/Right Components"
- assertVisible: "Custom Left/Right Components" # Verifies visibility.

- tapOn: # Taps the menu point again.
    point: "7%,6%"
- tapOn: # Taps an element with the text "Passing Content".
    text: "Passing Content"
- assertVisible: "Passing Content" # Verifies visibility.

- tapOn: # Taps the menu point again.
    point: "7%,6%"
- tapOn: # Taps an element with the text "Integrating w/ FlatList & FlashList".
    text: "Integrating w/ FlatList & FlashList"
- assertVisible: "Integrating w/ FlatList & FlashList" # Verifies visibility.

- tapOn: # Taps the menu point again.
    point: "7%,6%"
- tapOn: # Taps the second instance of an element with the text "Styling".
    text: "Styling"
    index: 1
- assertVisible: "Styling" # Verifies that "Styling" is visible.

- tapOn: # Taps the menu point again.
    point: "7%,6%"

- scrollUntilVisible: # Scrolls until a specified element is visible.
    element:
      text: "Icon"
    direction: "UP" # The direction of the scroll.

- tapOn: # Taps a specific point on the screen.
    point: "86%,46%" # Coordinates are 86% from the left and 46% from the top.
