appId: com.myapp 
---
- clearState 

- tapOn: # Taps a specific point on the screen.
    point: "7%,6%" # Coordinates are 7% from the left and 6% from the top.

- tapOn: # Taps an element with the text "Statuses".
    text: "Statuses"
- assertVisible: "Statuses" # Verifies that "Statuses" is visible on the screen.

- tapOn: # Taps the menu point again.
    point: "7%,6%"
- tapOn: # Taps an element with the text "Passing Content".
    text: "Passing Content"
- assertVisible: "Passing Content"

- tapOn: # Again, tapping the menu point.
    point: "7%,6%"
- tapOn: # Taps an element with the text "Styling", specifically the second instance.
    text: "Styling"
    index: 1 # Specifies the second instance of "Styling".
- assertVisible: "Styling" 
