appId: com.myapp # the app id of the app we want to test
# You can find the appId of an Ignite app in the `app.json` file
# as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
---
- clearState # clears the state of our app (navigation and authentication)
# - launchApp # launches the app
- tapOn:
    point: "7%,6%"

- scroll

- tapOn:
    text: "Variants"
    index: 0
- assertVisible: "Variants"

- tapOn:
    point: "7%,6%"
- tapOn:
    text: "Statuses"
    index: 1
- assertVisible: "Statuses"

- tapOn:
    point: "7%,6%"
- tapOn:
    text: "Passing Content"
    index: 1
- assertVisible: "Passing Content"

- tapOn:
    point: "7%,6%"
- tapOn:
    text: "Styling"
    index: 1
- assertVisible: "Styling"

- tapOn:
    point: "7%,6%"

- scrollUntilVisible:
    element:
      text: "Icon"
      index: 0
    direction: "UP"

- tapOn:
    point: "86%,46%"